--- a/animixosucontact.css
+++ b/animixosucontact.css
@@ -63,7 +63,11 @@
             left: 160px;
             padding: 3px 5px;
             border-radius: 4px;
+            cursor:pointer;
         }
+.box .submit:hover {
+	color:grey;
+}
  
  .logo {
     font-size: 2rem;
