--- a/animixosucontact.css
+++ b/animixosucontact.css
@@ -110,6 +110,7 @@
         width: 95%;
         height: 100px;
         font-size: 20px;
+	  padding: 0 4px;
     }
     .box h1 {
         font-size: 26px;
