--- a/anotherpg.css
+++ b/anotherpg.css
@@ -279,7 +279,15 @@ position: relative;
 
 
 
+/* ......................... */
 
+.contain .img32 {
+  background: url(/images/deathnote.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+/* ................................ */
 
 
 
